Disable Math and Symbols segmentation, fix dotted circle sequence

We currently do not use the Math and Symbols category for font
selection, hence disabling it, since it was also breaking sequences of
dotted circle plus combining marks which are frequently used to explain
combining marks.

BUG=641937
R=eae,kojii

Review-Url: https://codereview.chromium.org/2321043002
Cr-Commit-Position: refs/heads/master@{#417298}

Former-commit-id: 3ec36e0154e67ab8eda029ae5a234d581663e226